Visual refresh: teal accent, modern layout, rewritten copy
- Swap accent color from blue #4e91c9 to teal #00d4aa across nav, buttons, hovers
- Add gradient text effect on hero title with subtle glow
- Hobby cards lift on hover, reading list animation stagger reduced
- Contact form inputs rounded with teal focus state
- Rounded white cards, teal accent bar on Research Interest panel
- Constrain hobby card image heights to align with left panel
- Remove decorative corner triangles from About Me cards
- Rewrite About Me, Working, and Playing paragraphs
- Fix nav active state race condition in omegahh.js
- Update footer: GitHub/LinkedIn, copyright 2015-2026
- Bump body font to 16px/400 weight for readability

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<div class="col-md-6 col-md-offset-3">
 							<div class="inner-story text-center">
 								<h2>ABOUT ME</h2>
-								<p>I am Mike. I built this website and blog to record my research and life, to share interesting things by pictures and words. I am kind of a procrastinator. Hope this website and blog would remind and push me to keep the habit of recording and writing. :)</p>
+								<p>Hey, I'm Mike. This site is my corner of the internet where I document research, share ideas, and occasionally ramble about things I find fascinating. Writing keeps me honest and thinking clearly — so here we are.</p>
 							</div>
 						</div>
 					</div>
@@ -140,7 +140,7 @@
 								</figure>
 								<div class="offer-content text-center">
 									<h4>WORKING</h4>
-									<p>I work on AI Agents and generative AI models applied to genomics, building systems that understand and interpret genome sequences. From foundation models for DNA to agentic workflows for bioinformatics pipelines, I explore how AI can decode the language of life.<p>
+									<p>My work sits at the intersection of AI and genomics. I build AI agents and generative models that interpret genome sequences — from DNA foundation models to agentic bioinformatics pipelines. The goal: teaching machines to read the language of life.</p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -153,7 +153,7 @@
 								</figure>
 								<div class="offer-content text-center">
 									<h4>Playing</h4>
-									<p>I like swimming. It makes me feel free and relaxed. That's my daily routine in summer. Swimming and playing the guitar are my entertainments in leisure time.</p>
+									<p>Swimming is my reset button — nothing clears the mind like laps in the pool. When I'm not in the water, you'll probably find me picking up the guitar. Simple pleasures that keep things balanced.</p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -298,15 +298,15 @@
 				<div class="col-md-12">
 					<div class="main-footer">
 						<ul class="social">
-							<li><a href="https://www.facebook.com/hhalpha.omega.1">Facebook</a></li>
-							<li><a href="https://twitter.com/HhOmegalpha">Twitter</a></li>
+							<li><a href="#">GitHub</a></li>
+							<li><a href="#">LinkedIn</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 copyright">
-					<p>Copyright &copy; 2015-2016 <a href="#">Omega</a></p>
+					<p>Copyright &copy; 2015-2026 <a href="#">Omega</a></p>
 					<p>This is a personal website for individual using. All right reserved. Thank <a href="http://templatemo.com">templatemo</a></p>
 				</div>
 			</div>
